# sweet_sixteen_brain_float_model_converter

./: README.md  convert_to_bf16.py  pyproject.toml  requirements.txt
sweet_sixteen/: __init__.py  cli.py  converter.py  py.typed
